--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -138,3 +138,21 @@ body {
 }
 
 /* Add other CSS rules for your design as needed */
+
+.form-det .row {
+    margin: 20px;
+}
+
+.form-det .row .btn {
+    margin: 20px;
+}
+
+footer {
+    text-align: center;
+    background-color: #333;
+    /* Background color of the footer */
+    color: #fff;
+    /* Text color of the footer */
+    padding: 10px 0;
+    /* Padding at the top and bottom */
+}
