--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -117,7 +117,6 @@ body {
     width: 100%;
     height: 100%;
     background-color: #000000;
-    text-align: center;
 }
 
 .announcement {
@@ -138,6 +137,10 @@ body {
 }
 
 /* Add other CSS rules for your design as needed */
+
+.form-det .row {
+    margin: 20px;
+}
 
 .form-det .row {
     margin: 20px;
