--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -113,10 +113,15 @@ body {
 }
 
 
-.container {
+.container-1 {
+    background-color: #000000;
     width: 100%;
     height: 100%;
-    background-color: #000000;
+}
+
+.container-1 h1 {
+    text-align: center;
+    color: #fff;
 }
 
 .announcement {
@@ -136,11 +141,8 @@ body {
     font-size: 18px;
 }
 
-/* Add other CSS rules for your design as needed */
 
-.form-det .row {
-    margin: 20px;
-}
+/* Add other CSS rules for your design as needed */
 
 .form-det .row {
     margin: 20px;
@@ -152,10 +154,15 @@ body {
 
 footer {
     text-align: center;
-    background-color: #333;
+    background-color: #000000;
     /* Background color of the footer */
     color: #fff;
     /* Text color of the footer */
     padding: 10px 0;
     /* Padding at the top and bottom */
+}
+
+.form-det button {
+    margin: 20px;
+    background-color: green;
 }
